Codacy fixes #8469